<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    >
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/fg_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fg"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/fg_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/freethrows_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/freethrows"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/freethrows_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/triples_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/triples"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/triples_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/assists_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/assists"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/assists_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/rebounds_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rebounds"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/rebounds_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/or_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ofensive_rebounds"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/or_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/dreb_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dreb"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/dreb_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/stl_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stl"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/stl_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/blks_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/blks"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/blks_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/to_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/to_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/fouls_away"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fouls"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/fouls_home"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>