<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/oddContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="gone"
    android:layout_marginTop="6dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OverUnder"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ouOdd"
                android:textStyle="bold"
                android:text="110"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneyLine"
                />
            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acronymAwayOdd"
                />-->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/oddAwayImg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mlAwayOdd"
                android:textStyle="bold"
                android:text="-110"
                />
           <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acronymHomeOdd"
                />-->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/oddHomeImg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mlHomeOdd"
                android:textStyle="bold"
                android:text="-110"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spreadOdd"
                />
           <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acronymSpreadOdd"
                />-->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/spreadOddImg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/spreadOdd"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>